--- a/Vehicle/pom.xml
+++ b/Vehicle/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.4.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.espe</groupId>
-	<artifactId>vehicle-service</artifactId>
+	<groupId>com.example</groupId>
+	<artifactId>Vehicle</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>vehicle-service</name>
+	<name>Vehicle</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -34,6 +34,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
